--- a/resources/public/css/dashboard.css
+++ b/resources/public/css/dashboard.css
@@ -1,23 +1,82 @@
-body {background-color: #484848;}
-.panel-heading,
-.panel-body,
-.panel-footer {
-    overflow: hidden;
+body {
+  background-color: #484848;
 }
-#dashboard {margin-top: 50px; margin-left: auto; margin-right: auto;}
-.result.table {word-break: break-all; background-color: #fff;}
-.panel-footer .add-new {margin-right: 20px;}
-.fa-database {margin-right: 15px;}
-.fa-filter {margin-right: 15px;}
-.fa-chevron-right {margin-left: 10px;}
-.fa-chevron-left {margin-right: 10px;}
-
-#hover-mask {position: absolute; width: 100%; height: 100%; z-index: 5; opacity: 0.5; background-color: #333;}
-#create-form,
-#edit-form,
-#message-box {position: fixed; z-index:6; width: 350px; left: 50%; margin-left: -175px; top: 10%;}
-#message-box {z-index:7; width: 400px; margin-left: -200px;}
-.filters .input-group .input select {border: 0px; box-shadow: none;}
-.filters .input {background-color: #fff; border: 1px solid #ccc; overflow: hidden; border-top-right-radius: 4px; border-bottom-right-radius: 4px;}
-.table-wrapper {border-radius: 4px; background-color: #fff; padding: 5px; overflow: hidden;}
-.table-wrapper table {margin-bottom: 0px;}
+body .panel-heading,
+body .panel-body,
+body .panel-footer {
+  overflow: hidden;
+}
+body #dashboard {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+body .result.table {
+  word-break: break-all;
+  background-color: #fff;
+}
+body .panel-footer .add-new {
+  margin-right: 20px;
+}
+body .fa-database {
+  margin-right: 15px;
+}
+body .fa-filter {
+  margin-right: 15px;
+}
+body .fa-chevron-right {
+  margin-left: 10px;
+}
+body .fa-chevron-left {
+  margin-right: 10px;
+}
+body #hover-mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  opacity: 0.5;
+  background-color: #333;
+}
+body #edit-form,
+body #message-box {
+  position: fixed;
+  z-index: 6;
+  width: 350px;
+  left: 50%;
+  margin: auto;
+  top: 10%;
+}
+body #create-form,
+body #message-box {
+  position: fixed;
+  z-index: 7;
+  width: 400px;
+  left: 50%;
+  margin-left: -200px;
+  top: 10%;
+}
+body .filters .input-group .input select {
+  border: 0px;
+  box-shadow: none;
+}
+body .filters .input {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  overflow: hidden;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+body .table-wrapper {
+  border-radius: 4px;
+  background-color: #fff;
+  padding: 5px;
+  overflow: hidden;
+}
+body .table-wrapper table {
+  margin-bottom: 0px;
+}
+body .table-wrapper table tbody tr td pre {
+  max-height: 200px;
+  overflow-y: scroll;
+}
